Added GitHub repo link at the bottom

--- a/src/styles.css
+++ b/src/styles.css
@@ -43,3 +43,10 @@ p {
 .maxMinTemp {
   font-size: small;
 }
+
+#github-link {
+  font-size: 11px;
+  position: relative;
+  left: 170px;
+  top: -20px;
+}
